fix spacing on dashboard when there are no found posts

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10614,6 +10614,10 @@ form .checkbox-container {
  *	TABLES
  */
 
+.list-group-item {
+  padding: 0;
+}
+
 .clickable-row,
 .row-header {
   position: relative;
@@ -10624,6 +10628,10 @@ form .checkbox-container {
 
 .row-header {
   font-weight: bold;
+}
+
+.list-group-item.empty-row {
+  padding: 0.7em;
 }
 
 .clickable-row:hover {
@@ -11127,17 +11135,13 @@ form .checkbox-container {
  *	DASHBOARD
  */
 
-.dashboard-page .card-header h3 {
-  margin: 0;
-}
-
-.dashboard-page .list-group-item {
-  padding: 0;
-}
-
 .card-dashboard-list-item,
 .card-dashboard-list-item > a {
   width: 100%;
+  margin: 0;
+}
+
+.dashboard-page .card-header h3 {
   margin: 0;
 }
 
